extend with logo in header and sidebar from @vuepress/default-theme

--- a/website/.vuepress/styles/index.styl
+++ b/website/.vuepress/styles/index.styl
@@ -4,6 +4,8 @@
  * ref：https://v1.vuepress.vuejs.org/config/#index-styl
  */
 
+@import "vuepress-default-theme-sidebar"
+@import "vuepress-default-theme-mobile"
 @import "vuepress-plugin-container"
 
 body
