--- a/website/.vuepress/styles/index.styl
+++ b/website/.vuepress/styles/index.styl
@@ -17,8 +17,15 @@ img.home__logo
   display block
   margin auto
 
+.github-card-wrapper
+  margin-bottom 0.67em
+
 // tweak to @vuepress/theme-blog
 .content__default:not(.custom)
   > h1, h2, h3, h4, h5, h6
     margin-top: 0
     padding-top: 0
+  > h1, h2
+    margin-bottom: 0.67em
+  > h3, h4
+    margin-bottom: 0.33em
