adjust sidebar size for narrower desktops

--- a/website/.vuepress/styles/palette.styl
+++ b/website/.vuepress/styles/palette.styl
@@ -34,3 +34,6 @@ $MQMobileNarrow = 419px
 // code
 $lineNumbersWrapperWidth = 3.5rem
 $codeLang = js ts html md vue css sass scss less stylus go java c sh yaml py docker dockerfile makefile
+
+// override sidebar width from @vuepress/theme-default
+$sidebarWidth = 14rem
